# book-rust-brain

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
puzzle01/: Cargo.toml
puzzle01/src/: main.rs
puzzle02/: Cargo.toml
puzzle02/src/: main.rs
puzzle03/: Cargo.toml
puzzle03/src/: main.rs
puzzle04/: Cargo.toml
puzzle04/src/: main.rs
puzzle05/: Cargo.toml
puzzle05/src/: main.rs
puzzle06/: Cargo.toml
puzzle06/src/: main.rs
puzzle07/: Cargo.toml
puzzle07/src/: main.rs
puzzle08/: Cargo.toml
puzzle08/src/: main.rs
puzzle09/: Cargo.toml
puzzle09/src/: main.rs
puzzle10/: Cargo.toml
puzzle10/src/: main.rs
puzzle11/: Cargo.toml
puzzle11/src/: main.rs
puzzle12/: Cargo.toml
puzzle12/src/: main.rs
puzzle13/: Cargo.toml
puzzle13/src/: main.rs
puzzle14/: Cargo.toml
puzzle14/src/: main.rs
puzzle15/: Cargo.toml
puzzle15/src/: main.rs
puzzle16/: Cargo.toml
puzzle16/src/: main.rs
puzzle17/: Cargo.toml
puzzle17/src/: main.rs
puzzle18/: Cargo.toml
puzzle18/src/: main.rs
puzzle19/: Cargo.toml
puzzle19/src/: main.rs
puzzle20/: Cargo.toml
puzzle20/src/: main.rs
puzzle21/: Cargo.toml
puzzle21/src/: main.rs
puzzle22/: Cargo.toml
puzzle22/src/: main.rs
puzzle23/: Cargo.toml
puzzle23/src/: main.rs
puzzle24/: Cargo.toml
puzzle24/src/: main.rs
src/: main.rs  p05.rs  p06.rs
